--- a/Symfony/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/Symfony/src/AppBundle/Resources/views/Security/login.html.twig
@@ -21,6 +21,7 @@
 
          <button type="submit">login</button>
     </form>
+    <a href="{{ path('user_registration')}}">registration</a>
 
 
 {% endblock %}
